# collegium_serpentis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  run_black.sh  run_client.sh  run_isort.sh  run_redis.sh  run_ruff.sh  run_server.sh  run_tests.sh
.claude/: settings.local.json
.cursor/rules/: frontend.mdc  linter.mdc  objective.mdc  refactorer.mdc  tester.mdc
.github/: copilot-instructions.md
.github/instructions/: tester.instructions.md
.windsurf/rules/: documenter.md  refactorer.md  tester.md
angular-frontend/angular-command-centre/: Dockerfile  README.md  angular.json  nginx.conf  package.json
angular-frontend/angular-command-centre/src/: index.html  styles.scss
examples/: python_client_redis_streams.py
frontend-command-centre/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-command-centre/src/: App.jsx  App.vue  index.css  main.jsx
frontend-command-centre/src/assets/: base.css  main.css
src/: __init__.py  server.py
src/client/: Dockerfile  __init__.py  client.py  requirements.txt
src/server/: Dockerfile  __init__.py  background_tasks.py  config.py  message_validation.py  redis_manager.py  server.py  websocket_manager.py
src/server/static/: status_display.html
src/shared/: __init__.py  config.py
tests/: conftest.py  test_server.py
tests/client/: test_chat_consumer.py  test_client.py  test_client_connection.py
tests/server/: __init__.py  conftest.py  test_background_tasks.py  test_message_validation.py  test_redis_manager.py  test_server.py  test_websocket_manager.py
tests/shared/: __init__.py  test_schemas.py  test_shared_config.py
tmp/frontend-command-centre/: README.md  package-lock.json
(+46 files in other folders)
